started the chrome extension project and learned about how to save an input field into an array

--- a/Chrome_Extension/index.html
+++ b/Chrome_Extension/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chrome Extension</title>
-</head>
-<body>
-    <input type="text" id="input-el" placeholder="Type something...">
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <input type="text" id="input-el" placeholder="Type something..." />
     <button id="input-btn">Save</button>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
