Adds tab saving and delete functionality with persistence
Implements local storage to persist saved items across sessions.

Adds new "Save Tab" button to capture current browser tab URL.

Adds "Delete All" button with red styling to clear all saved items.

Updates Chrome extension permissions to access tab information.

--- a/Chrome_Extension/index.html
+++ b/Chrome_Extension/index.html
@@ -9,6 +9,9 @@
   <body>
     <input type="text" id="input-el" placeholder="Type something..." />
     <button id="input-btn">Save</button>
+    <button id="tab-btn">Save Tab</button>
+    <button id="delete-all-btn">Delete All</button>
+
     <br />
     <ul id="ul-el"></ul>
 
